--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "<img src=\"https://tylermcginnis.com/tylermcginnis_glasses-300.png\" width=\"300\" align=\"right\">",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open",
+    "build": "webpack",
+    "start": "webpack-dev-server --open --progress -d",
+    "watch": "webpack --progress --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "babel": {
